# ensemble_pose

./: README.md  docker-compose.yml  environment_py39.yml  pyproject.toml  setup.cfg  setup.py
docker/: README.md
docker/pytorch1.11.0-cuda11.3/: Dockerfile  base_environment.yml  environment.yml
docker/pytorch1.12.1-cuda11.3/: Dockerfile  base_environment.yml  environment.yml
docker/scripts/: build_image.sh  start_docker.sh  start_docker_gpu_0.sh  start_docker_gpu_1.sh
experiments/expt_corrector_analysis/: README.md  analyze_corrector.py  corrector_analysis.py  generate_bash_script.py  generate_object_images_index.py  parameters.yml  parameters_tless.yml  parameters_ycbv.yml  tune.yml  tune_parameters.py  tune_tless.yml
experiments/expt_self_supervised/: README.md  README_supercloud.md  cfg.py  eval_single_obj.py  proposed_model.py  run_self_supervised_training_old.py  run_training.py  self_supervised_single_obj_training.py  training_utils.py  (+7 more)
scripts/: README.md  aws_make_datasets_from_tar.sh  cp_data_to_aws.sh  create_zarr_dataset.py  download_bop_datasets_archives.sh  download_bop_datasets_archives_ycbv_tless.sh  gen_bop_datasets_tar.sh  gen_sdf_from_meshes.py  make_datasets_from_tar.sh  supercloud_install_py38.sh  supercloud_make_datasets_from_tar.sh  tensordock_make_datasets_from_tar.sh  visualize_different_centers.py  visualize_sdf.py
tests/: test_icp.py  test_keypoint_corrector.py  test_keypoint_corrector_benchmark.py  test_loss_functions.py  test_math_utils.py  test_math_utils_benchmark.py  test_model_sdf.py  test_robust_centroid.py  test_sdf_gen.py
(+392 files in other folders)
